feat: add list punishments api
