# docs/swagger.json
@@ -1219,6 +1219,22 @@
                         "in": "query"
                     },
                     {
+                        "enum": [
+                            0,
+                            1,
+                            2
+                        ],
+                        "type": "integer",
+                        "x-enum-varnames": [
+                            "RangeNotDealt",
+                            "RangeDealt",
+                            "RangeAll"
+                        ],
+                        "description": "Range, 0: not dealt, 1: dealt, 2: all",
+                        "name": "range",
+                        "in": "query"
+                    },
+                    {
                         "maximum": 50,
                         "minimum": 0,
                         "type": "integer",
@@ -1283,7 +1299,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.HttpError"
+                            "$ref": "#/definitions/common.HttpError"
                         }
                     }
                 }
@@ -1359,7 +1375,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.HttpError"
+                            "$ref": "#/definitions/common.HttpError"
                         }
                     }
                 }
@@ -1810,6 +1826,59 @@
                 }
             }
         },
+        "/users/me/punishments": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Penalty"
+                ],
+                "summary": "List my punishments",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Punishment"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{id}/punishments": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Penalty"
+                ],
+                "summary": "List punishments by user id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Punishment"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/users/{user_id}": {
             "get": {
                 "produces": [
@@ -1848,6 +1917,37 @@
         }
     },
     "definitions": {
+        "common.ErrorDetailElement": {
+            "type": "object",
+            "properties": {
+                "field": {
+                    "type": "string"
+                },
+                "tag": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
+        "common.HttpError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "detail": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/common.ErrorDetailElement"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "division.CreateModel": {
             "type": "object",
             "properties": {
@@ -2456,6 +2556,68 @@
                 "MessageTypeMail"
             ]
         },
+        "models.Punishment": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "description": "time when this punishment creates",
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "description": "time when this punishment revoked",
+                    "type": "string"
+                },
+                "division": {
+                    "description": "foreign key",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.Division"
+                        }
+                    ]
+                },
+                "division_id": {
+                    "type": "integer"
+                },
+                "duration": {
+                    "$ref": "#/definitions/time.Duration"
+                },
+                "end_time": {
+                    "description": "end_time of this punishment",
+                    "type": "string"
+                },
+                "floor": {
+                    "description": "foreign key",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.Floor"
+                        }
+                    ]
+                },
+                "floor_id": {
+                    "description": "punished because of this floor",
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "made_by": {
+                    "description": "admin user_id who made this punish",
+                    "type": "integer"
+                },
+                "reason": {
+                    "description": "reason",
+                    "type": "string"
+                },
+                "start_time": {
+                    "description": "start from end_time of previous punishment (punishment accumulation of different floors)\nif no previous punishment or previous punishment end time less than time.Now() (synced), set start time time.Now()",
+                    "type": "string"
+                },
+                "user_id": {
+                    "description": "user punished",
+                    "type": "integer"
+                }
+            }
+        },
         "models.Report": {
             "type": "object",
             "properties": {
@@ -2670,36 +2832,28 @@
                 }
             }
         },
-        "utils.ErrorDetailElement": {
-            "type": "object",
-            "properties": {
-                "field": {
-                    "type": "string"
-                },
-                "tag": {
-                    "type": "string"
-                },
-                "value": {
-                    "type": "string"
-                }
-            }
-        },
-        "utils.HttpError": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer"
-                },
-                "detail": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/utils.ErrorDetailElement"
-                    }
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
+        "time.Duration": {
+            "type": "integer",
+            "enum": [
+                -9223372036854775808,
+                9223372036854775807,
+                1,
+                1000,
+                1000000,
+                1000000000,
+                60000000000,
+                3600000000000
+            ],
+            "x-enum-varnames": [
+                "minDuration",
+                "maxDuration",
+                "Nanosecond",
+                "Microsecond",
+                "Millisecond",
+                "Second",
+                "Minute",
+                "Hour"
+            ]
         }
     }
 }
